Complete project setup with OAuth2, backend fixes, and frontend configuration